# elect_hotline

./: .coveragerc  .dependabot_requirements.txt  .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  depoly.md  docker-compose.yml  env-local.example  postcss.config.js  push_heroku_env.py  pylock.toml  pyproject.toml  pytest.ini  requirements.txt  settings.py  settings_test.py  tailwind.config.js  urls.py  vercel.json  vercel_build.sh  wsgi.py
.github/workflows/: ci.yml  test-main.yml  tests.yml  vercel-beta.yml  vercel-stable.yml
dependabot/: requirements.txt
docs/: index.html  mobile_api_v4.html  mobile_api_v4.json
kube/: dashboard.yml  ps1.sh
kube/metrics/: grafana.yml  prom-operator-deployment.yml  ufo-prometheus.yaml  ufo-servicemon.yml
kube/metrics/kube-sys/: kube-alert-rules.yml  kube-apiserver-servicemon.yml  kubelet-servicemon.yml
kube/postgres/: postgres.yml
kube/tls/: prod.yml  test-selfissued.yml  test-staging.yml
kube/ufo/: ufo-config-map.yml  ufo-deployment.yml  ufo-gateway.yml  ufo-httproute.yml  ufo-migrate-job.yml  ufo-service.yml
locale/: babel.cfg  django.pot
locale/ru/LC_MESSAGES/: django.mo  django.po
scripts/: 2020_ankety.py  ankety2019.csv  answers.py  cik_regions.json  regions.py  spb-mo.py
src/: asgi.py  env-local.example  logging_to_loguru.py  manage.py  settings.py  urls.py  uvicorn_log_config.yml  wsgi.py
src/locale/: babel.cfg  django.pot
src/scripts/: 2020_ankety.py  answers.py  mo-spb.txt  regions.py  spb-mo.txt  spb-tiks.py  uiks spb.txt
src/static/: choices.post.css  daisy-fix.css  main.css  main.post.css  manifest.json  ufo2.js
src/ufo/: admin.py  api.py  apps.py  checks.py  errors.py  jinja.py  metrics.py  middleware.py  signals.py
src/ufo/fixtures/: 2016.json  ankety2018.json  mo_spb.json  proto2018.json  spb-tiks-2019.json
src/ufo/migrations/: 0004_auto_20200517_1233.py  0006_auto_20200520_0922.py  0008_alter_clienterror_data_alter_orgbranch_uik_ranges_and_more.py  0010_answer_ufo_answer_appuser_or_operator.py  0011_remove_answer_ufo_answer_appuser_or_operator_and_more.py  0013_websiteuser_country.py  0014_alter_region_country.py  0015_alter_region_country.py  (+12 more)
src/utils/: cache.py  collections.py  file_storage.py  logging.py  redis_util.py  shell.py  shortcuts.py  uploadhandler.py
static/: base.css  choices.post.css  main.css  ufo.js  ufo2.js
templates/: 401_email_link_invalid.html  403.html  _answer_contacts.html  _feed.html  _tik_email_requests.html  _topleftmenu.html  answers_feed.html  base.html  feed_example.html  frontpage.html  history.html  manage_campaigns.html  manage_staff.html  organizations.html  protocol.html  protocols.html  tik_complaints_feed.html  uik.html  userevents.html  users.html
templates/modals/: _ContactModal.html  _LoginModal.html  _NotificationsModal.html  _OrgCreateModal.html  _OrgEditModal.html  _PhotosModal.html  _SettingsModal.html  _UikRangesModal.html
test/: base.py  checks__test.py  settings_test.py
test/apiv3/: get_elections__test.py  get_questions__test.py  get_regions__test.py  patch_answer__test.py  post_answer__test.py  post_profile__test.py
test/apiv4/: get_elections__test.py  get_organizations__test.py  get_questions__test.py  get_regions__test.py  patch_answer__test.py  post_answer__test.py  post_invalid_answer__test.py
test/auth/: email_login__test.py  email_login_invalid_turnstile_token__test.py  email_login_no_turnstile_token__test.py  google__test.py  google_login_invalid_state_secret__test.py  google_login_invalid_token__test.py
test/deprecated/: base_selenium.py  create_campaign__test.py  filter_history__test.py
test/ui/: create_organization__test.py  filter_answers_history__test.py  filter_history_new__test.py  login_with_email_join_organization__test.py  stream_answers__test.py
ufo/: admin.py  api.py  apps.py  jinja_extensions.py  middleware.py
ufo/fixtures/: 2018.json  2019-inputs.json  rregions.json
ufo/migrations/: 0001_initial.py  0002_websiteuser_unread_notifications.py  0003_auto_20200515_0721.py  0005_auto_20200517_1323.py  0007_auto_20200520_0924.py  0009_alter_region_utc_offset.py  0012_country_remove_websiteuser_country_region_country.py  0016_alter_answer_region.py  0017_websiteuser_theme.py  0020_alter_organization_name.py
ufo/mobile_api_v3/: __init__.py  errors.py  get_elections.py  get_regions.py
ufo/models/: __init__.py  answer.py  base.py  channel.py  client_error.py  contact.py  election.py  mobileuser.py  protocol.py  question.py  quiztopic.py  region.py  websiteuser.py
ufo/views/: __init__.py  _answer.html  _answer_contacts.html  _navbar.html  _pagination.html  account.html  account.py  answers_feed_view.py  auth_view.py  base.html  context.py  export_view.py  frontpage_view.py  history.html  history.py  history_view.py  home.html  home.py  http_error.html  organizations_view.py  tik_complaints_feed_view.py  users_view.py  validation_error.html
utils/: admin.py  basic.py  http.py  mail.py  path.py
(+91 files in other folders)
